fix(a11y): fix color contrasts for combobox pills border

--- a/projects/angular/src/forms/combobox/_variables.combobox.scss
+++ b/projects/angular/src/forms/combobox/_variables.combobox.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
+// Copyright (c) 2016-2022 VMware, Inc. All Rights Reserved.
 // This software is released under MIT license.
 // The full license information can be found in LICENSE in the root directory of this project.
 
@@ -16,7 +16,7 @@ $clr-combobox-border-radius: $clr_baselineRem_3px !default;
 
 $clr-combobox-input-background-color: $clr-color-neutral-100 !default;
 $clr-combobox-pill-background-color: $clr-color-neutral-0 !default;
-$clr-combobox-pill-border-color: $clr-color-neutral-200 !default;
+$clr-combobox-pill-border-color: $clr-color-neutral-700 !default;
 $clr-combobox-pill-border-radius: $clr_baselineRem_3px !default;
 $clr-combobox-pill-font-color: $clr-color-neutral-800 !default;
 $clr-combobox-filter-highlight: $clr-color-neutral-800 !default;
